# AI6_6team_Intermediate-Project

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  bidflow.design.md  pyproject.toml  run.py
configs/: base.yaml  decision_rules.yaml  dev.yaml  exp_reproduce.yaml  logging.yaml  prod.yaml  prompts_analyzer.yaml  security.yaml
docs/: auth_db_team.md  final_comprehensive_report.md  intermediate_report_script.md  report.md  test_interim_report.md  web_dev.md  중간발표_통합보고서.md  중간발표보고서.ipynb  최종_종합보고서.md
frontend/: README.md
notebooks/: exp01_chunking_optimization.ipynb  exp01v2_structure_aware_chunking.ipynb  exp02_retrieval_strategy.ipynb  exp02v2_retrieval_strategy.ipynb  exp03_prompt_engineering.ipynb  exp03v2_prompt_engineering.ipynb  exp04_pipeline_enhancement.ipynb  exp04v2_retrieval_architecture.ipynb  exp04v3_matching_quality.ipynb  exp05_targeted_quality.ipynb  exp06_normalization_typed_cut.ipynb  exp07_table_aware_rag.ipynb  exp08_corpus_eda.ipynb  exp09_generalization_verification.ipynb  exp10_hwp_format_verification.ipynb  exp10b_generalization_rerun.ipynb  intermediate_report.ipynb
scripts/: calibrate_signal_threshold.py  create_notebook_skeletons.py  debug_extraction.py  debug_ragas_repro.py  diagnose_v1_drop.py  expand_testset_to_30.py  generate_final_report_charts.py  generate_presentation_pptx.py  generate_qa_manual.py  generate_raw_eval.py  inspect_doc_a_tables.py  inspect_nb_structure.py  migrate_data.py  migrate_to_sqlite.py  run_exp10b.py  run_exp10ce.py  run_exp10d.py  run_exp10d_plus.py  run_exp10e.py  run_exp11.py  run_exp12.py  run_exp13.py  run_exp14_diagnosis.py  run_exp15_generation.py  run_exp16_metric_and_sc5.py  run_exp17_to_099.py  run_exp18_gt_fix.py  run_exp19_diagnosis.py  run_exp19_phase_b.py  run_exp19_phase_c_gt_refine.py  run_exp19_phase_c_q1_fix.py  run_exp19_phase_d_eval.py  run_exp19_phase_d_lock_benchmark.py  run_exp19_to_099.py  simulate_v5b.py  (+9 more)
(+199 files in other folders)
